--- a/book_club/users/templates/users/base.html
+++ b/book_club/users/templates/users/base.html
@@ -26,7 +26,7 @@
     {% block style %}{% endblock %}
 </head>
 <body>
-  
+  {{localize_key}}
  
         {% include 'users/includes/header.html' %}
 
@@ -54,7 +54,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
     <!-- A plugin for password show/hide  -->
-   <script src="https://unpkg.com/bootstrap-show-password@1.2.1/dist/bootstrap-show-password.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-show-password@1.2.1/dist/bootstrap-show-password.min.js"></script>
+
+    <!-- Language selector -->
+    <script>
+      function submit_language(){
+        var form = document.getElementById("language_select");
+        form.submit();  
+      }
+    </script>
    
    
 
