--- a/book_club/users/templates/users/home.html
+++ b/book_club/users/templates/users/home.html
@@ -1,7 +1,7 @@
 {% extends 'users/base.html' %}
-
+{% load i18n %}
 {% block content %}
-<h1>Coucou</h1>
+<h1>{% trans 'Book Club' %}</h1>
 <div class="wrapper">
       <div class="title-text">
         <div class="title login">
