--- a/book_club/users/templates/users/includes/header.html
+++ b/book_club/users/templates/users/includes/header.html
@@ -31,6 +31,7 @@
                             Sign up <i class="fas fa-user-plus"></i>
                         </a>
                     {% endif %}
+                    {% include 'users/includes/langswitch.html' %}
                 </div>
             </div>
         </div>
