--- a/book_club/static/assets/css/forms.css
+++ b/book_club/static/assets/css/forms.css
@@ -1,36 +1,41 @@
+/* || General */
+
+input::placeholder{
+  color: #999;
+  transition: all 0.3s ease;
+}
+input:focus::placeholder{
+  color: #b3b3b3;
+}
+
+.form-group label {
+  display: none !important;
+}
+
 /* || Login and Register */
 
 /* Mobile */
 
 
-  .wrapper{
+  .auth-wrapper{
     overflow: hidden;
-    max-width: 390px;
-    background: var(--mid-color);
+    max-width: 95%;
+    background: var(--brand-color);
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
   }
-  .wrapper .title-text{
-    display: flex;
-    width: 200%;
-  }
-  .wrapper .title{
-    width: 50%;
-    font-size: 35px;
-    font-weight: 600;
-    text-align: center;
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-  }
-  .wrapper .slide-controls{
+  
+ 
+  .auth-wrapper .slide-controls{
     position: relative;
     display: flex;
     height: 50px;
     width: 100%;
     overflow: hidden;
-    margin: 30px 0 10px 0;
+    margin: 0px 0 5px 0;
     justify-content: space-between;
-    border: 1px solid lightgrey;
+    
     border-radius: 5px;
   }
   .slide-controls .slide{
@@ -44,9 +49,10 @@
     cursor: pointer;
     z-index: 1;
     transition: all 0.6s ease;
+    border: 1px solid var(--mid-color);
   }
   .slide-controls label.signup{
-    color: #000;
+    color: var(--darkest-color);
   }
   .slide-controls .slider-tab{
     position: absolute;
@@ -55,7 +61,7 @@
     left: 0;
     z-index: 0;
     border-radius: 5px;
-    background: var(--brand-color);
+    background: var(--mid-color);
     transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
   }
   input[type="radio"]{
@@ -79,10 +85,12 @@
     cursor: default;
     user-select: none;
   }
-  .wrapper .form-container{
+  .auth-wrapper .form-container{
     width: 100%;
     overflow: hidden;
   }
+
+  
   .form-container .form-inner{
     display: flex;
     width: 200%;
@@ -108,26 +116,21 @@
     transition: all 0.3s ease;
   }
   .form-inner form .field input:focus{
-    border-color: #fc83bb;
-    /* box-shadow: inset 0 0 3px #fb6aae; */
+    border-color: var(--joy-color);
+    box-shadow: inset 0 0 3px var(--joy-color); 
   }
-  .form-inner form .field input::placeholder{
-    color: #999;
-    transition: all 0.3s ease;
-  }
-  form .field input:focus::placeholder{
-    color: #b3b3b3;
-  }
+ 
   .form-inner form .pass-link{
     margin-top: 5px;
   }
   .form-inner form .signup-link{
     text-align: center;
     margin-top: 30px;
+    font-size:15px;
   }
   .form-inner form .pass-link a,
   .form-inner form .signup-link a{
-    color: #fa4299;
+    color: var(--joy-color);
     text-decoration: none;
   }
   .form-inner form .pass-link a:hover,
@@ -146,9 +149,13 @@
     width: 300%;
     position: absolute;
     left: -100%;
-    background: -webkit-linear-gradient(right, #a445b2, #fa4299, #a445b2, #fa4299);
+    background-color: var(--dark-color);
     border-radius: 5px;
     transition: all 0.4s ease;;
+  }
+
+  form .btn-signup{
+    background-color:var(--brand-color) !important;
   }
   form .btn:hover .btn-layer{
     left: 0;
@@ -160,13 +167,15 @@
     position: relative;
     background: none;
     border: none;
-    color: #fff;
+    color: var(--darkest-color);
     padding-left: 0;
     border-radius: 5px;
     font-size: 20px;
     font-weight: 500;
     cursor: pointer;
   }
+
+
 /* Computer */
 
 .login-register {
