--- a/book_club/users/templates/users/includes/header.html
+++ b/book_club/users/templates/users/includes/header.html
@@ -24,7 +24,7 @@
                             Log out <i class="fas fa-sign-out-alt"></i>
                         </a>
                     {% else %}
-                        <a class="nav-item nav-link" href="{% url 'authentication' %}">
+                        <a class="nav-item nav-link" href="{% url 'login' %}">
                             Log in <i class="fas fa-sign-in-alt"></i>
                         </a>
                         
