--- a/book_club/users/templates/users/authentication/login.html
+++ b/book_club/users/templates/users/authentication/login.html
@@ -1,24 +1,67 @@
-
-{% load crispy_forms_tags %}
-
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-               
-                    {{ form|crispy }}
-               
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+{% extends 'users/base.html' %}
+{% load static i18n %}
+{% block content %}
+<div class="container-fluid text-center">
+    <div class="auth-wrapper mx-auto">
+        <!-- Intro Start -->
+        <div>
+            <div class="text-center">
+                <img  src="{% static 'assets/img/illustrations/support.svg' %}" style="height:100px;"/>
             </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-            </small><br>
-            <small class="text-muted">
-                <a href="/">Forgot password?</a>
-            </small>
+            <h1 class="brand-color text-center mt-2">{% trans 'Welcome back' %}</h1>
+            <p>{% trans 'Please sign in to access your account' %}</p>
+        </div>
+        <!-- Intro End -->
+    
+        <!-- Form Start -->
+        <div class="form-container">
+            {% if login_form.non_field_errors %}
+                <ul class='form-errors'>
+                    {% for error in login_form.non_field_errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+      
+            <form method="post" id="loginForm">
+                {% csrf_token %}
+                <div class="input-group">
+                    {{login_form.username}}
+                    <span class="input-group-append bg-white border-left-0">
+                        <span class="input-group-text bg-transparent">
+                            @
+                        </span>
+                    </span>
+                </div>
+
+                <div class="input-group">
+                    {{login_form.password}}
+                    <span class="input-group-append bg-white border-left-0">
+                        <span class="input-group-text bg-transparent">
+                            <i class="fa-regular fa-eye"></i>
+                        </span>
+                    </span>
+                </div>
+
+                <div class="row"> 
+                    <div class="col-6 text-left small">Remember</div>
+                    <div class="col-6 text-right small"><a href="#" class="brand-color">{% trans 'Forgot password?' %}</a></div>
+                </div>
+            </form>
+       
+        </div>
+        <!-- Form container End -->
+        
+        <!-- Start buttons -->
+        <div>
+            <button  class="btn btn-wide btn-brand-color" type="submit" form="loginForm" >{% trans 'Log in' %}</button>
+            <div class="signup-link small">
+            {% trans 'New member?' %} <a href="{% url 'register' %}" class="mid-color">{% trans 'Signup now' %}</a>
+            </div>
         </div>
     </div>
+  <!-- End auth wrapper -->
+</div>
+{% endblock %}
+
+
