--- a/book_club/static/assets/css/forms.css
+++ b/book_club/static/assets/css/forms.css
@@ -43,167 +43,37 @@ input:focus::placeholder{
   justify-content: space-between;
 }
 
-  /* .auth-wrapper{
-    overflow: hidden;
-    max-width: 95%;
-    background: var(--brand-color);
-    padding: 30px;
-    border-radius: 5px;
-    box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+
+
+
+/* For Desktop*/
+@media only screen and (min-width: 768px) {
+  .auth-container {
+    background-repeat: no-repeat;
+    background-position: 90% 95% ;
+    
+  }
+
+  #login-container {
+    background-image: url('../img/illustrations/login.svg');
+    background-size: 15%;
+  }
+
+  #register-container {
+    background-image: url('../img/illustrations/register.svg');
+    
+  }
+  .auth-wrapper{
+    max-width:400px;
+    height:700px;
+    padding:30px;
+    border:1px solid #ccc;
+    border-radius:40px;
+    justify-content: space-evenly !important;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
   
-
- 
-  .auth-wrapper .slide-controls{
-    position: relative;
-    display: flex;
-    height: 50px;
-    width: 100%;
-    overflow: hidden;
-    margin: 0px 0 5px 0;
-    justify-content: space-between;
-    border-radius: 5px;
-  }
-
-  .slide-controls .slide{
-    height: 100%;
-    width: 100%;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    line-height: 48px;
-    cursor: pointer;
-    z-index: 1;
-    transition: all 0.6s ease;
-    border: 1px solid var(--mid-color);
-  }
-  .slide-controls label.signup{
-    color: var(--darkest-color);
-  }
-  .slide-controls .slider-tab{
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    left: 0;
-    z-index: 0;
-    border-radius: 5px;
-    background: var(--mid-color);
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-  }
-  input[type="radio"]{
-    display: none;
-  }
-  #signup:checked ~ .slider-tab{
-    left: 50%;
-  }
-  #signup:checked ~ label.signup{
-    color: #fff;
-    cursor: default;
-    user-select: none;
-  }
-  #signup:checked ~ label.login{
-    color: #000;
-  }
-  #login:checked ~ label.signup{
-    color: #000;
-  }
-  #login:checked ~ label.login{
-    cursor: default;
-    user-select: none;
-  }
-  .auth-wrapper .form-container{
-    width: 100%;
-    overflow: hidden;
-  }
-
-  
-  .form-container .form-inner{
-    display: flex;
-    width: 200%;
-  }
-  .form-container .form-inner form{
-    width: 50%;
-    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
-  }
-  .form-inner form .field{
-    height: 50px;
-    width: 100%;
-    margin-top: 20px;
-  }
-  .form-inner form .field input{
-    height: 100%;
-    width: 100%;
-    outline: none;
-    padding-left: 15px;
-    border-radius: 5px;
-    border: 1px solid lightgrey;
-    border-bottom-width: 2px;
-    font-size: 17px;
-    transition: all 0.3s ease;
-  }
-  .form-inner form .field input:focus{
-    border-color: var(--joy-color);
-    box-shadow: inset 0 0 3px var(--joy-color); 
-  }
- 
-  .form-inner form .pass-link{
-    margin-top: 5px;
-  }
-  .form-inner form .signup-link{
-    text-align: center;
-    margin-top: 30px;
-    font-size:15px;
-  }
-  .form-inner form .pass-link a,
-  .form-inner form .signup-link a{
-    color: var(--joy-color);
-    text-decoration: none;
-  }
-  .form-inner form .pass-link a:hover,
-  .form-inner form .signup-link a:hover{
-    text-decoration: underline;
-  }
-  form .btn{
-    height: 50px;
-    width: 100%;
-    border-radius: 5px;
-    position: relative;
-    overflow: hidden;
-  }
-  form .btn .btn-layer{
-    height: 100%;
-    width: 300%;
-    position: absolute;
-    left: -100%;
-    background-color: var(--dark-color);
-    border-radius: 5px;
-    transition: all 0.4s ease;;
-  }
-
-  form .btn-signup{
-    background-color:var(--brand-color) !important;
-  }
-  form .btn:hover .btn-layer{
-    left: 0;
-  }
-  form .btn input[type="submit"]{
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    position: relative;
-    background: none;
-    border: none;
-    color: var(--darkest-color);
-    padding-left: 0;
-    border-radius: 5px;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-  } */
-
-
-/* Computer */
+}
 
 .login-register {
     width: 100%;
