--- a/book_club/static/assets/css/main.css
+++ b/book_club/static/assets/css/main.css
@@ -39,16 +39,17 @@ body {
   font-family: 'Poppins';
 }
 
+.container-fluid {
+  min-height:calc(100dvh - 50px) !important;
+}
+
 @media only screen and (max-width:767px) {
   body {
     overflow-x: hidden !important;
     max-width: 100% !important;
   }
 
-  .container {
-    padding-left:0px !important;
-    padding-right:0px !important;
-  }
+  
 }
   
 
@@ -107,11 +108,81 @@ a:hover{
 
 /* || Header and Main Navigation */
 
+.site-header {
+  max-height: 50px !important;
+
+}
+
 .navbar a {
   color: var(--dark-color);
 }
 
-/* … */
+/* Hamburger icon */
+
+#hamburger-icon {
+  display: none;
+}
+
+.hamburger-toggle {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  transition-duration: .5s;
+}
+
+.bars {
+  width: 100%;
+  height: 4px;
+  background-color: var(--brand-color);
+  border-radius: 4px;
+}
+
+#bar2 {
+  transition-duration: .8s;
+}
+
+#bar1,#bar3 {
+  width: 70%;
+}
+
+#hamburger-icon:checked + .hamburger-toggle .bars {
+  position: absolute;
+  transition-duration: .5s;
+}
+
+#hamburger-icon:checked + .hamburger-toggle #bar2 {
+  transform: scaleX(0);
+  transition-duration: .5s;
+}
+
+#hamburger-icon:checked + .hamburger-toggle #bar1 {
+  width: 100%;
+  transform: rotate(45deg);
+  transition-duration: .5s;
+}
+
+#hamburger-icon:checked + .hamburger-toggle #bar3 {
+  width: 100%;
+  transform: rotate(-45deg);
+  transition-duration: .5s;
+}
+
+#hamburger-icon:checked + .hamburger-toggle {
+  transition-duration: .5s;
+  transform: rotate(180deg);
+}
+
+@media only screen and (min-width: 768px) {
+  .hamburger-toggle{
+    display: none !important;
+  }
+}
 
 /* || Language selector */
 
@@ -156,4 +227,13 @@ color:var(--light-color) !important;
 .btn-brand-color:hover {
   color:black;
   background-color: var(--mid-color);
+}
+
+.btn-mid-color {
+  background-color: var(--mid-color);
+}
+
+.btn-mid-color:hover {
+  color:black;
+  background-color: var(--brand-color);
 }
