--- a/book_club/users/templates/users/authentication/change_email.html
+++ b/book_club/users/templates/users/authentication/change_email.html
@@ -6,54 +6,41 @@
         <!-- Intro Start -->
         <div>
             <div class="text-center">
-                <img  src="{% static 'assets/img/illustrations/support.svg' %}" style="height:100px;"/>
+                <img  src="{% static 'assets/img/illustrations/email_address.svg' %}" style="height:100px;"/>
             </div>
-            <h1 class="brand-color text-center mt-2">{% trans 'Welcome back' %}</h1>
-            <p>{% trans 'Please sign in to access your account' %}</p>
+            <h1 class="brand-color text-center mt-2">{% trans 'Update your email' %}</h1>
         </div>
         <!-- Intro End -->
     
         <!-- Form Start -->
         <div class="form-container">
-            {% if login_form.non_field_errors %}
+            {% if form.non_field_errors %}
                 <ul class='form-errors'>
-                    {% for error in login_form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
                         <li>{{ error }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
-      
-            <form method="post" id="loginForm">
+            <form method="post" id="emailForm">
                 {% csrf_token %}
                 <div class="input-group">
-                    {{login_form.username}}
+                    {{form.email}}
                     <span class="input-group-append bg-white border-left-0">
                         <span class="input-group-text bg-transparent">
                             @
                         </span>
                     </span>
                 </div>
-
-                
-                {{login_form.password}}
-                {{login_form.password.errors}}
-                    
-                
-
-                <div class="row"> 
-                    <div class="col-6 text-left small">{{ login_form.remember_me }} <label class="ml-1">{% trans 'Remember me' %}</label></div>
-                    <div class="col-6 text-right small"><a href="#" class="brand-color">{% trans 'Forgot password?' %}</a></div>
-                </div>
+                {{form.email.errors}}
             </form>
-       
         </div>
         <!-- Form container End -->
         
         <!-- Start buttons -->
         <div>
-            <button  class="btn btn-wide btn-brand-color" type="submit" form="loginForm" >{% trans 'Log in' %}</button>
+            <button  class="btn btn-wide btn-brand-color" type="submit" form="emailForm" >{% trans 'Update Email' %}</button>
             <div class="signup-link small">
-            {% trans 'New member?' %} <a href="{% url 'register' %}" class="mid-color">{% trans 'Signup now' %}</a>
+            <a href="{% url 'register' %}" class="mid-color">{% trans 'Cancel' %}</a>
             </div>
         </div>
     </div>
