--- a/book_club/users/templates/users/authentication/logout.html
+++ b/book_club/users/templates/users/authentication/logout.html
@@ -1,9 +1,15 @@
 {% extends 'users/base.html' %}
+{% load i18n static %}
 {% block content %}
-    <h2>You have been logged out</h2>
-    <div class="border-top pt-3"  style="min-height:65vh;">
-        <small class="text-muted">
-            <a href="{% url 'login' %}">Log In Again</a>
-        </small>
+<div class="container-fluid d-flex align-items-center justify-content-center text-center">
+    <div class="logout-container">
+        <div class="text-center">
+            <img  src="{% static 'assets/img/illustrations/logout.svg' %}" style="height:200px;"/>
+        </div>
+        <h4 class="brand-color mt-1">{% trans "See you soon !" %}</h4>
+        <p>{% trans 'You have been logged out successfully '%}</p>
+        <a href="{% url 'login' %}" class="btn btn-brand-color">{% trans 'Log In' %}</a>
     </div>
+</div>
+    
 {% endblock content %}
