--- a/book_club/users/templates/users/authentication/emails/verify_email_message.html
+++ b/book_club/users/templates/users/authentication/emails/verify_email_message.html
@@ -1,17 +1,19 @@
-<div style="background-color: #c2c2c2; padding: 15px;">
-    <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #5865F2; color: #ffffff;">Verify Email</h2>
+{% load i18n %}
+
+<div style="background-color: #d2d2d2; padding: 15px; text-align:center">
+    <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #93aec1; color: #ffffff;">{% trans 'Verify Email' %}</h2>
     <div style="margin: 0; padding: 15px; background-color: #ffffff;">
-        <p>Hi {{ user.name }},</p>
-        <p>You created an account on Delight.com, you need to verify your email. Please click on the button below to verify your email.</p>
-        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #5865F2; padding: 15px; font-weight: bold; text-decoration: none; border-radius: 5px;">
-            Verify Email
+        <p>{% trans 'Hi' %} {{ user.pseudo }},</p>
+        <p>{% trans 'You created an account on ...., you need to verify your email. Please click on the button below to verify your email.' %}</p>
+        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+            {% trans 'Verify Email' %}
         </a>
-        <p style="margin-top: 40px;">Or you can copy the link below to your browser</p>
+        <p style="margin-top: 40px;">{% trans 'Or you can copy the link below to your browser' %}</p>
         <p>{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}</p>
-        <p>The Delight Team</p>
+        <p>Signature</p>
     </div>
     <div style="text-align: center; margin-top: 20px 0;">
-        <p>© {% now 'Y' %} <a href="https://delighto.medium.com">Blog</a></p>
-        <p>Follow us on <a href="https://twitter.com/DelightGbolahan">Twitter</a></p>
+        <p>© {% now 'Y' %} <a href="#">Company</a></p>
+        
     </div>
 </div>
