--- a/book_club/users/templates/users/authentication/register.html
+++ b/book_club/users/templates/users/authentication/register.html
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="input-group">
-                    {{register_form.username}}
+                    {{register_form.pseudo}}
                     <span class="input-group-append bg-white border-left-0">
                         <span class="input-group-text bg-transparent">
                             <i class="fa-regular fa-user"></i>
@@ -59,7 +59,7 @@
                     {{register_form.password2.errors}}
                
                 
-                    <div class="text-left small">{% trans 'By creating an account you agree to our'%} <a href="#" class="brand-color">{% trans 'Terms and Conditions'%}</a> {% trans 'and our ' %} <a href="#" class="brand-color">{% trans 'Privacy Policy'%}</a>.</div>
+                    <div class="text-left small">{{register_form.is_rgpd}}<span class="pl-2">{% trans 'By creating an account you agree to our'%} <a href="#" class="brand-color">{% trans 'Terms and Conditions'%}</a> {% trans 'and our ' %} <a href="#" class="brand-color">{% trans 'Privacy Policy'%}</a>.</div>
                     
                 
             </form>
