--- a/book_club/users/templates/users/authentication/change_email.html
+++ b/book_club/users/templates/users/authentication/change_email.html
@@ -1,7 +1,7 @@
 {% extends 'users/base.html' %}
 {% load static i18n %}
 {% block content %}
-<div id="login-container" class="auth-container container-fluid d-flex align-items-center justify-content-center text-center">
+<div id="change-mail-container" class="auth-container container-fluid d-flex align-items-center justify-content-center text-center">
     <div class="auth-wrapper mx-auto">
         <!-- Intro Start -->
         <div>
