--- a/book_club/users/templates/users/authentication/emails/password_reset_email.html
+++ b/book_club/users/templates/users/authentication/emails/password_reset_email.html
@@ -1,53 +1,19 @@
-{% load mjml static i18n %}
+{% load i18n %}
 
-
-{% mjml %}
-<mjml>
-  <mj-head>
-    <mj-attributes>
-      <mj-all padding="0px"></mj-all>
-      <mj-class name="preheader" color="#000000" font-size="11px" font-family="Ubuntu, Helvetica, Arial, sans-serif" padding="0px"></mj-class>
-    </mj-attributes>
-    <mj-style inline="inline">a { text-decoration: none; color: inherit; }</mj-style>
-  </mj-head>
-  <mj-body background-color="#334155">
-    <mj-section background-color="#334155" padding="5px">
-  		<mj-column >
-         <mj-image src="{% static 'assets/img/logo.png' %}" alt="circles_logo" width="192px" align="center"></mj-image>
-        </mj-column>
+<div style="background-color: #d2d2d2; padding: 15px; text-align:center">
+    <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #93aec1; color: #ffffff;">{% trans 'Verify Email' %}</h2>
+    <div style="margin: 0; padding: 15px; background-color: #ffffff;">
+        <p>{% trans 'Hi' %} {{ user.pseudo }},</p>
+        <p>{% trans 'You created an account on ...., you need to verify your email. Please click on the button below to verify your email.' %}</p>
+        <a href="{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+            {% trans 'Verify Email' %}
+        </a>
+        <p style="margin-top: 40px;">{% trans 'Or you can copy the link below to your browser' %}</p>
+        <p>{{ request.scheme }}://{{ domain }}{% url 'verify-email-confirm' uidb64=uid token=token %}</p>
+        <p>Signature</p>
+    </div>
+    <div style="text-align: center; margin-top: 20px 0;">
+        <p>© {% now 'Y' %} <a href="#">Company</a></p>
         
-        
-
-        
-     
-    
-    </mj-section>
-    <mj-section background-color="#ffffff" padding-top="0px" padding-bottom="20px">
-      <mj-column width="100%">
-        <mj-image src="https://static.lingoapp.com/assets/images/email/il-password-reset@2x.png" alt="cadenas" width="192px" padding="10px 25px"></mj-image>
-        <mj-text align="center" color="#334155" font-size="25px" font-family="Lato, Helvetica, Arial, sans-serif" padding="10px 25px"><strong>{% trans "Hey" %} {{user.get_username}}</strong>
-            <br />
-            <br />
-            {% trans 'Forgot your password ?' %}
-            </strong></mj-text>
-        <mj-text align="center" color="#94A3B8" font-size="18px" font-family="Lato, Helvetica, Arial, sans-serif" padding="10px 30px"><strong>{% trans 'Not to worry, we got you! Let’s get you a new password. Click on this button and follow the steps !' %}</strong></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" padding-top="0px" padding-bottom="20px">
-      <mj-column>
-      {% block reset_link %}
-        <mj-button href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}" background-color="#334155" font-size="16px" >{% trans 'Reset Password' %}</mj-button>
-        {% endblock %}
-        <mj-text padding="20px" align="center">{% trans "If it doesn't work, copy paste this link" %}</mj-text>
-      <mj-text padding-left="20px" padding-right="20px" align="center">{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}</mj-text>
-      </mj-column>
-    </mj-section>
-    
-    <mj-section background-color="#FDE68A" padding="10px">
-      <mj-column vertical-align="top" width="100%">
-        <mj-text align="center" color="#334155" font-size="20px" font-family="Lato, Helvetica, Arial, sans-serif" padding="10px 25px">{% trans "Best, Circles Team" %}</mj-text>
-      </mj-column>
-    </mj-section>
-  </mj-body>
-</mjml>
-{% endmjml %}
+    </div>
+</div>
