--- a/book_club/static/assets/css/forms.css
+++ b/book_club/static/assets/css/forms.css
@@ -84,6 +84,7 @@ input:focus::placeholder{
   height: 50px !important;
   background-color:rgb(239, 239, 239) !important;
   border:none !important;
+  padding-left:10px;
 }
 
 #password-form input:focusin{
