--- a/book_club/users/templates/users/authentication/emails/create_account_email.html
+++ b/book_club/users/templates/users/authentication/emails/create_account_email.html
@@ -3,13 +3,15 @@
 <div style="background-color: #d2d2d2; padding: 15px; text-align:center">
     <h2 style="margin: 0; padding: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; background-color: #93aec1; color: #ffffff;">{% trans 'Verify Email' %}</h2>
     <div style="margin: 0; padding: 15px; background-color: #ffffff;">
-        <p>{% trans 'Hi' %} {{ user.pseudo }},</p>
+        <p>{% trans 'Hi' %}</p>
         <p>{% trans "You're receiving this email because you requested a password reset for your user account at"%} {{domain}}</p>
-        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirmconfirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
-            {% trans 'Reset Password' %}
+        <p>{% trans "We don't have any account registered with this email address." %}</p>
+        <p>{% trans "However, you can create a new account !" %}</p>
+        <a href="{% url 'register' %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+            {% trans 'Create account' %}
         </a>
         <p style="margin-top: 40px;">{% trans 'Or you can copy the link below to your browser' %}</p>
-        <p>{{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}</p>
+        <p>{% url "register" %}</p>
         <p>Signature</p>
     </div>
     <div style="text-align: center; margin-top: 20px 0;">
