--- a/book_club/users/templates/users/authentication/login.html
+++ b/book_club/users/templates/users/authentication/login.html
@@ -42,7 +42,7 @@
 
                 <div class="row"> 
                     <div class="col-6 text-left small">{{ login_form.remember_me }} <label class="ml-1">{% trans 'Remember me' %}</label></div>
-                    <div class="col-6 text-right small"><a href="#" class="brand-color">{% trans 'Forgot password?' %}</a></div>
+                    <div class="col-6 text-right small"><a href="{% url 'password-reset' %}" class="brand-color">{% trans 'Forgot password?' %}</a></div>
                 </div>
             </form>
        
