--- a/book_club/users/templates/users/authentication/password_reset.html
+++ b/book_club/users/templates/users/authentication/password_reset.html
@@ -26,20 +26,16 @@
                 {% csrf_token %}
                 
                 {% for field in form %}
-                <div class="input-group">
-                
-	        	{{ field }}
-            <span class="input-group-append bg-white border-left-0">
+                    <div class="input-group">
+	        	        {{ field }}
                         <span class="input-group-text bg-transparent">
-                            @
+                                <i class="fa-solid fa-at"></i>
                         </span>
-                    </span>
-            </div>
-	        	{% if field.errors %}
-	        		<small>{{ field.errors|striptags  }}</small> 
-	        	{% endif %}
-		{% endfor %}
-                
+                    </div>
+                    {% if field.errors %}
+                        <small>{{ field.errors|striptags  }}</small> 
+                    {% endif %}
+		        {% endfor %}
             </form>
         </div>
         <!-- Form container End -->
