--- a/book_club/dashboard/templates/dashboard/base.html
+++ b/book_club/dashboard/templates/dashboard/base.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
      
     <!-- Custom Css Files-->
     <link rel="stylesheet" href="{% static 'assets/css/main.css' %}">
@@ -30,27 +28,29 @@
 <body>
   {{localize_key}}
  
-  {% include 'users/includes/header.html' %}
+        {% include 'users/includes/header.html' %}
 
-  <div class="page-wrapper">
-  
-    {% block content %}{% endblock %}
-  </div>
+        
 
-  {% include 'users/includes/messages.html' %}
-  {% include 'users/includes/footer.html' %}
+        
+        <div class="page-wrapper">
+        
+     
+        {% block content %}{% endblock %}
+        </div>
+        {% include 'users/includes/messages.html' %}
+        {% include 'users/includes/footer.html' %}
 
        
 
       
-    <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap JavaScript -->
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
  
-   
+    
+    
+    
 
     <!-- Language selector -->
     <script>
@@ -59,23 +59,15 @@
         form.submit();  
       }
     </script>
-   
-    <!-- Display Toast Notifications-->
-    {% if messages %}
-      <script>
-          {% for message in messages %}
-              $(document).ready(function () {
-                  $('.toast').toast('show');
-              });
-          {% endfor %}
-      </script>
-    {% endif %}
 
     <script>
       var messageModal = new bootstrap.Modal(document.getElementById("notification-modal"));
       messageModal.show();
       console.log("ok");
     </script>
+
+    
+   
    
 
 
