--- a/book_club/static/assets/css/forms.css
+++ b/book_club/static/assets/css/forms.css
@@ -1,8 +1,11 @@
 /* || General */
 
-input.form-control, span.input-group-text, .input-group-append > button {
+input.form-control, span.input-group-text {
  background-color: rgb(239, 239, 239) !important;
  border:none !important;
+ height:50px !important;
+ font-size:20px;
+
 }
 
 input.form-control {
@@ -16,6 +19,7 @@ input.form-control {
 input::placeholder{
   color: #999;
   transition: all 0.3s ease;
+  font-size: 16px !important;
 }
 input:focus::placeholder{
   color: #b3b3b3;
@@ -95,20 +99,21 @@ input:focus::placeholder{
 form.login > div.alert.alert-block.alert-danger {
   display: none !important;
 }
-ul.form-errors {
+ul.form-errors, ul.errorlist {
   background-color: palevioletred;
-  color:black;
-  padding:20px 5px;
+  color:black !important;
+  padding: 2px 5px 10px 5px;
+  
 
 }
 ul.form-errors li, ul.errorlist li {
   list-style: none !important;
 }
 
-ul.errorlist {
-  color:palevioletred !important;
+/* ul.errorlist li {
+  color:palevioletred;
   font-weight: bold !important;
-}
+} */
 
 .input-invalid{
   background-color:palevioletred !important;
