--- a/book_club/users/templates/users/authentication/register.html
+++ b/book_club/users/templates/users/authentication/register.html
@@ -15,51 +15,56 @@
     
         <!-- Form Start -->
         <div class="form-container">
-            {% if register_form.non_field_errors %}
-                <ul class='form-errors'>
-                    {% for error in register_form.non_field_errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
+
+            {% if register_form.errors %}
+            <div class="form-errors">
+                {{ register_form.errors }}
+            </div>
             {% endif %}
       
             <form method="post" id="registerForm">
                 {% csrf_token %}
                 <div class="input-group">
                     {{register_form.email}}
-                    <span class="input-group-append bg-white border-left-0">
-                        <span class="input-group-text bg-transparent">
-                            @
-                        </span>
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-solid fa-at"></i>
                     </span>
                 </div>
 
                 <div class="input-group">
                     {{register_form.pseudo}}
-                    <span class="input-group-append bg-white border-left-0">
-                        <span class="input-group-text bg-transparent">
-                            <i class="fa-regular fa-user"></i>
-                        </span>
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-regular fa-user"></i>
                     </span>
                 </div>
 
-                
-                
+                <div class="input-group">
                     {{register_form.password1}}
-                    <span class="input-group-append bg-white border-left-0">
-                        
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-regular fa-eye" id="pwd-icon1" onclick="togglePassword()"></i>
                     </span>
-                    {{register_form.password1.errors}}
+                </div>
                 
 
-                
+                <div class="input-group">
                     {{register_form.password2}}
-                    <span class="input-group-append bg-white border-left-0">
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-regular fa-eye" id="pwd-icon2" onclick="togglePassword()"></i>
                     </span>
-                    {{register_form.password2.errors}}
+                </div>
+
+                <div class="password-help-container">
+                    <ul class="password-help">
+                        <li id="password-len">{% trans 'More than 8 characters' %}</li>
+                        <li id="password-mixed">{% trans 'More than 8 characters' %}</li>
+                        <li id="password-number">{% trans 'More than 8 characters' %}</li>
+                        <li id="password-special">{% trans 'More than 8 characters' %}</li>
+                        <li id="password-same">{% trans 'More than 8 characters' %}</li>
+                    </ul>
+                </div>
                
-                
-                    <div class="text-left small">{{register_form.is_rgpd}}<span class="pl-2">{% trans 'By creating an account you agree to our'%} <a href="#" class="brand-color">{% trans 'Terms and Conditions'%}</a> {% trans 'and our ' %} <a href="#" class="brand-color">{% trans 'Privacy Policy'%}</a>.</div>
+
+                <div class="text-left small">{{register_form.is_rgpd}}<span class="ps-2">{% trans 'By creating an account you agree to our'%} <a href="#" class="brand-color">{% trans 'Terms and Conditions'%}</a> {% trans 'and our ' %} <a href="#" class="brand-color">{% trans 'Privacy Policy'%}</a>.</div>
                     
                 
             </form>
@@ -69,7 +74,7 @@
         
         <!-- Start buttons -->
         <div class="pt-3 pb-3">
-            <button  class="btn btn-wide btn-brand-color" type="submit" form="registerForm" >{% trans 'Sign up' %}</button>
+            <button  class="btn btn-wide btn-brand-color" type="submit" form="registerForm" id="register-btn" >{% trans 'Sign up' %}</button>
             <div class="signup-link small">
             {% trans 'Already a member?' %} <a href="{% url 'login' %}" class="mid-color">{% trans 'Log in' %}</a>
             </div>
@@ -77,6 +82,115 @@
     </div>
   <!-- End auth wrapper -->
 </div>
+{% endblock %}
+
+{% block extrajs %}
+<script>
+    function togglePassword() {
+        var input1 = document.getElementById("id_password1");
+        var input2 = document.getElementById("id_password2");
+        var icon1 = document.getElementById("pwd-icon1");
+        var icon2 = document.getElementById("pwd-icon2");
+        if (input1.type === "password") {
+            input1.type = "text";
+            icon1.classList.remove("fa-eye");
+            icon1.classList.add("fa-eye-slash");
+        } else {
+            input1.type = "password";
+            icon1.classList.remove("fa-eye-slash");
+            icon1.classList.add("fa-eye");
+        }
+
+        if (input2.type === "password") {
+            input2.type = "text";
+            icon2.classList.remove("fa-eye");
+            icon2.classList.add("fa-eye-slash");
+        } else {
+            input2.type = "password";
+            icon2.classList.remove("fa-eye-slash");
+            icon2.classList.add("fa-eye");
+        }
+    }
+</script>
+
+<script>
+    let password1 = document.getElementById("id_password1");
+    let password2 = document.getElementById("id_password2");
+    let passwordLen = document.getElementById("password-len");
+    let passwordMixed = document.getElementById("password-mixed");
+    let passwordNumber = document.getElementById("password-number");
+    let passwordSpecial = document.getElementById("password-special");
+    let passwordSame = document.getElementById("password-same");
+    let button = document.getElementById("register-btn");
+    let length = false;
+    button.disabled = true;
+    
+    password1.onkeyup = function(){
+        console.log(conditions)
+        password1Input = password1.value;
+        password2Input = password2.value;
+        // Check password length
+        if (password1Input.length > 8){
+            passwordLen.style.color = "green";
+            length = true;
+        }
+        else {
+            passwordLen.style.color = "red";
+        }
+        // Check for mixed case
+        if (password1Input.match(/[a-z]/) && password1Input.match(/[A-Z]/)) {
+            passwordMixed.style.color = "green";
+            conditions += 1;
+        } else {
+            passwordMixed.style.color = "red";
+            
+        }
+  
+        // Check for numbers
+        if (password1Input.match(/\d/)) {
+            passwordNumber.style.color = "green";
+            conditions += 1;
+        } else {
+            passwordNumber.style.color = "red";
+            
+        }
+  
+        // Check for special characters
+        if (password1Input.match(/[^a-zA-Z\d]/)) {
+            passwordSpecial.style.color = "green";
+            conditions += 1;
+        } else {
+            passwordSpecial.style.color = "red";
+            button.disabled= true;
+        }
+
+        
+        
+    }
+    //Check for same passwords
+password2.onkeyup = function(){
+    password1Input = password1.value;
+    password2Input = password2.value;
+    if (password1Input == password2Input){
+        passwordSame.style.color = "green";
+        conditions += 1;
+    }
+    else {
+        passwordSame.style.color = "red";
+        button.disabled= true;
+    }
+
+    if (conditions >= 5){
+        button.disabled= false;
+    }
+    else {
+        button.disabled= true;
+    }
+}    
+        
+
+</script>
+
 {% endblock %}
 
 
