--- a/book_club/users/templates/users/includes/header.html
+++ b/book_club/users/templates/users/includes/header.html
@@ -1,25 +1,25 @@
-<header class="site-header" style="margin-bottom: 5px">
+{% load i18n %}
+
+<header class="site-header list-unstyled" style="margin-bottom: 5px">
+
     <nav class="navbar navbar-expand-md navbar-color">
         <div class="container">
-            <!-- Navbar Left Side -->
-            <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/">Home</a>
-            </div>
+            <a class="navbar-brand" href="{% url 'home' %}">Logo</a>
+
+            <!-- IN CASE YOU WANT AN COLLAPSED MENU, UN COMMENT THIS SECTION 
             
-             <input type="checkbox" id="hamburger-icon" data-target="#navbarToggle" data-toggle="collapse">
+              <input type="checkbox" id="hamburger-icon" data-bs-target="#navbarToggle" data-bs-toggle="collapse">
                 <label for="hamburger-icon" class="hamburger-toggle">
                     <div class="bars" id="bar1"></div>
                     <div class="bars" id="bar2"></div>
                     <div class="bars" id="bar3"></div>
-                </label>
+                </label> 
                 
             <div class="collapse navbar-collapse" id="navbarToggle">
-                <!-- Navbar Left Side -->
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="/">About</a>
-                </div>
+
+            -->
                 <!-- Navbar Right Side -->
-                <div class="navbar-nav">
+                <div class="navbar-nav ms-auto text-center pe-3">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'profile' user.slug %}">
                             {{user.username}} <i class="fas fa-user"></i>
@@ -28,15 +28,20 @@
                             Log out <i class="fas fa-sign-out-alt"></i>
                         </a>
                     {% else %}
-                        <a class="nav-item nav-link" href="{% url 'login' %}">
-                            Log in <i class="fas fa-sign-in-alt"></i>
+                        <a class="nav-item nav-link " href="{% url 'login' %}">
+                            <i class="fa-regular fa-user fa-xl"></i><p class="m-0"><small>{% trans 'Log In' %}</small></p></a>
                         </a>
                         
                     {% endif %}
-                    {% include 'users/includes/langswitch.html' %}
+                    
                 </div>
-            </div>
+            <!-- IN CASE YOU WANT AN COLLAPSED MENU, UN COMMENT THIS END TAG
+            </div> 
+            -->
+            {% include 'users/includes/langswitch.html' %}
         </div>
     </nav>
+    
+   
 </header>
 
