--- a/book_club/users/templates/users/authentication/emails/password_reset_email.html
+++ b/book_club/users/templates/users/authentication/emails/password_reset_email.html
@@ -5,7 +5,7 @@
     <div style="margin: 0; padding: 15px; background-color: #ffffff;">
         <p>{% trans 'Hi' %} {{ user.pseudo }},</p>
         <p>{% trans "You're receiving this email because you requested a password reset for your user account at"%} {{domain}}</p>
-        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirmconfirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
+        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}" style="border: 0; color: #ffffff; background-color: #93aec1; padding: 15px; margin-top:40px; font-weight: bold; text-decoration: none; border-radius: 5px;">
             {% trans 'Reset Password' %}
         </a>
         <p style="margin-top: 40px;">{% trans 'Or you can copy the link below to your browser' %}</p>
