--- a/book_club/users/templates/users/authentication/password_reset_confirm.html
+++ b/book_club/users/templates/users/authentication/password_reset_confirm.html
@@ -21,29 +21,41 @@
                     {% endfor %}
                 </ul>
             {% endif %}
-            {{form.new_password1.help_text }}
+            
             <form method="post" id="password-form">
                 {% csrf_token %}
                 
-                {% for field in form %}
+            
+
+        <div class="input-group">
+                    {{form.new_password1}}
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-regular fa-eye" id="pwd-icon2" onclick="togglePassword()"></i>
+                    </span>
+                </div>
                 <div class="input-group">
-                
-	        	{{ field }}
-            
-            </div>
-            
-	        	{% if field.errors %}
-	        		<small>{{ field.errors|striptags  }}</small> 
-	        	{% endif %}
-		{% endfor %}
-                
+                    {{form.new_password2}}
+                    <span class="input-group-text bg-transparent">
+                        <i class="fa-regular fa-eye" id="pwd-icon2" onclick="togglePassword()"></i>
+                    </span>
+                </div>
+                <div class="password-help-container">
+                    <ul class="password-help">
+                        <li id="password-len">{% trans 'Minimum 8 characters' %}</li>
+                        <li id="password-mixed">{% trans 'Mix of lowercase and uppercase' %}</li>
+                        <li id="password-number">{% trans 'Minimum a number' %}</li>
+                        <li id="password-special">{% trans 'Minimum a special character' %}</li>
+                        <li id="password-same">{% trans 'Same passwords' %}</li>
+                    </ul>
+                </div>
             </form>
+            
         </div>
         <!-- Form container End -->
         
         <!-- Start buttons -->
         <div>
-            <button  class="btn btn-wide btn-brand-color" type="submit" form="password-form" >{% trans 'Reset Password' %}</button>
+            <button  class="btn btn-wide btn-brand-color" type="submit" form="password-form" id="reset-btn" >{% trans 'Reset Password' %}</button>
             <div class="signup-link small">
             <a href="{% url 'login' %}" class="mid-color">{% trans 'Cancel' %}</a>
             </div>
@@ -53,3 +65,150 @@
 </div>
 {% endblock %}
 
+{% block extrajs %}
+<script>
+    function togglePassword() {
+        var input1 = document.getElementById("id_new_password1");
+        var input2 = document.getElementById("id__new_password2");
+        var icon1 = document.getElementById("pwd-icon1");
+        var icon2 = document.getElementById("pwd-icon2");
+        if (input1.type === "password") {
+            input1.type = "text";
+            icon1.classList.remove("fa-eye");
+            icon1.classList.add("fa-eye-slash");
+        } else {
+            input1.type = "password";
+            icon1.classList.remove("fa-eye-slash");
+            icon1.classList.add("fa-eye");
+        }
+
+        if (input2.type === "password") {
+            input2.type = "text";
+            icon2.classList.remove("fa-eye");
+            icon2.classList.add("fa-eye-slash");
+        } else {
+            input2.type = "password";
+            icon2.classList.remove("fa-eye-slash");
+            icon2.classList.add("fa-eye");
+        }
+    }
+</script>
+
+<script>
+    let password1 = document.getElementById("id_new_password1");
+    let password2 = document.getElementById("id_new_password2");
+    let passwordLen = document.getElementById("password-len");
+    let passwordMixed = document.getElementById("password-mixed");
+    let passwordNumber = document.getElementById("password-number");
+    let passwordSpecial = document.getElementById("password-special");
+    let passwordSame = document.getElementById("password-same");
+    let button = document.getElementById("reset-btn");
+    let is_length = false;
+    let is_mixed = false;
+    let is_number = false;
+    let is_special = false;
+    let is_same = false;
+
+    
+
+    button.disabled = true;
+    
+    password1.onkeyup = function(){
+      
+        password1Input = password1.value;
+        password2Input = password2.value;
+        // Check password length
+        if (password1Input.length >= 8){
+            is_length = true;
+            passwordLen.classList.add("valid");
+            passwordLen.classList.remove("warning");
+            
+            
+        }
+        else {
+            passwordLen.classList.add("warning");
+            passwordLen.classList.remove("valid");
+            is_length = false;
+        }
+        // Check for mixed case
+        if (password1Input.match(/[a-z]/) && password1Input.match(/[A-Z]/)) {
+            passwordMixed.classList.remove("warning");
+            passwordMixed.classList.add("valid");
+            is_mixed = true;
+        } else {
+            passwordMixed.classList.add("warning");
+            passwordMixed.classList.remove("valid");
+            is_mixed = false;
+            
+        }
+  
+        // Check for numbers
+        if (password1Input.match(/\d/)) {
+            passwordNumber.classList.add("valid");
+            passwordNumber.classList.remove("warning");
+            is_number = true;
+        } else {
+            passwordNumber.classList.add("warning");
+            passwordNumber.classList.remove("valid");
+            is_number=false;
+            
+        }
+  
+        // Check for special characters
+        if (password1Input.match(/[^a-zA-Z\d]/)) {
+            passwordSpecial.classList.add("valid");
+            passwordSpecial.classList.remove("warning");
+            is_special=true;
+        } else {
+            passwordSpecial.classList.add("warning");
+            passwordSpecial.classList.remove("valid");
+            is_special=false;
+        }
+
+        if (password1Input == password2Input){
+            passwordSame.classList.add("valid");
+            passwordSame.classList.remove("warning");
+            is_same = true;
+        }
+        else {
+            passwordSame.classList.add("warning");
+            passwordSame.classList.remove("valid");
+            is_same=false;
+        }
+
+        if(is_length && is_mixed && is_number  && is_special  && is_same ){
+            button.disabled = false;
+        }
+        else {
+            button.disabled = true;
+        }
+
+        
+        
+    }
+    //Check for same passwords
+    password2.onkeyup = function(){
+        password1Input = password1.value;
+        password2Input = password2.value;
+        if (password1Input == password2Input){
+            passwordSame.classList.add("valid");
+            passwordSame.classList.remove("warning");
+            is_same = true;
+        }
+        else {
+            passwordSame.classList.add("warning");
+            passwordSame.classList.remove("valid");
+            is_same=false;
+        }
+
+        if(is_length && is_mixed && is_number  && is_special  && is_same ){
+            button.disabled = false;
+        }
+        else {
+            button.disabled = true;
+        }
+}    
+        
+
+</script>
+{% endblock %}
