--- a/book_club/users/templates/users/includes/header.html
+++ b/book_club/users/templates/users/includes/header.html
@@ -1,10 +1,10 @@
-{% load i18n %}
+{% load static i18n %}
 
 <header class="site-header list-unstyled" style="margin-bottom: 5px">
 
     <nav class="navbar navbar-expand-md navbar-color">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Logo</a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img id="header-logo" src={% static 'assets/img/logo.png' %}/></a>
 
             <!-- IN CASE YOU WANT AN COLLAPSED MENU, UN COMMENT THIS SECTION 
             
@@ -22,10 +22,10 @@
                 <div class="navbar-nav ms-auto text-center pe-3">
                     {% if user.is_authenticated %}
                         <a class="nav-item nav-link" href="{% url 'profile' user.slug %}">
-                            {{user.username}} <i class="fas fa-user"></i>
+                            <i class="fas fa-user fa-xl"></i><p class="m-0"><small>{{user.pseudo}}</small></p>
                         </a>
                         <a class="nav-item nav-link" href="{% url 'logout' %}">
-                            Log out <i class="fas fa-sign-out-alt"></i>
+                            <i class="fa-solid fa-person-walking-luggage fa-xl"></i><p class="m-0"><small>{% trans 'Log Out' %}</small></p>
                         </a>
                     {% else %}
                         <a class="nav-item nav-link " href="{% url 'login' %}">
