--- a/book_club/static/assets/css/main.css
+++ b/book_club/static/assets/css/main.css
@@ -61,11 +61,13 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'OpenDyslexic';
 }
 
-a:hover{
+a, a:hover{
   text-decoration: none;
 }
 
-
+.text-justify {
+  text-align: justify !important;
+}
 
 .brand-color, a.mid-color:hover {
   color: var(--brand-color);
@@ -81,7 +83,7 @@ a:hover{
   color: var(--darkest-color);
 }
 
-.joy-color {
+.joy-color, a.lightest-color:hover {
   color: var(--joy-color);
 }
 
@@ -93,9 +95,11 @@ a:hover{
   color: var(--light-color);
 }
 
-.lighest-color {
+.lightest-color {
   color: var(--lightest-color);
 }
+
+
 
 /* Responsive */
 @media only screen and (max-width: 600px) {
@@ -125,6 +129,14 @@ a:hover{
 
 #header-logo {
   width:50px;
+}
+
+.header-icon {
+  font-size:38px;
+}
+
+.nav-item:hover{
+  color:var(--mid-color);
 }
 
 /* Hamburger icon */
@@ -251,4 +263,257 @@ color:var(--light-color) !important;
   color:black;
   background-color: var(--brand-color);
 }
+
+/* Edit buttons */
+
+.btn-edit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px 8px 12px;
+  gap: 8px;
+  height: 30px;
+  width:fit-content;
+  text-decoration: none !important;
+  border: none;
+  background: var(--dark-color);
+  color: var(--darkest-color);
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.label {
+  margin-top: 1px;
+  font-size: 12px;
+  line-height: 22px;
+  
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  text-decoration:none !important;
+}
+
+
+
+
+.btn-edit:hover {
+  background: var(--joy-color);
+}
+
+.btn-edit:hover i.btn-edit-icon{
+  animation: spin 1s linear infinite;
+}
+
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(-8deg);
+  }
+
+  50% {
+    transform: rotate(0deg);
+  }
+
+  75% {
+    transform: rotate(8deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+/* Avatar */
+.avatar {
+  border-radius:30px;
+  font-size:30px;
+  width:40px;
+  height:40px;
+}
+
+.initial {
+
+  fill:white;
+
+}
+.color-1{
+  fill: var(--brand-color);
+}
+
+.color-2{
+  fill: var(--mid-color);
+}
+
+.color-3{
+  fill: var(--joy-color);
+}
+
+.color-4 {
+  fill: var(--dark-color);
+}
+
+.color-5 {
+  fill: var(--light-color);
+}
+
+.color-7 {
+  fill: darkcyan;
+}
+
+.color-8 {
+  fill: palevioletred;
+}
+
+
+/* || Profile */
+
+@media only screen and (min-width: 768px){
+  .profile-card {
+    background-color: whitesmoke;
+    max-width:400px;
+    box-shadow: 0 10px 7px -5px rgba(0, 0, 0, 0.4);
+    border-radius:30px 30px 30px 30px;
+  }
+
+  .profile-card header::before{
+    
+    background-image:
+     radial-gradient(circle at 10px -5px, transparent 12px, whitesmoke 13px) !important;
+  }
+  
+  .profile-card header::after{
+    
+    background-image:
+      radial-gradient(circle at 10px 15px, whitesmoke 12px, transparent 13px) !important;
+  }
+
+  .profile-card header{
+    border-radius: 30px 30px 0 0;
+  }
+
+ 
+}
+
+
+.profile-card {
+  position: relative;
+  width: 100%;
+  
+}
+.profile-card header {
+  position: relative;
+  width: 100%;
+  height: 120px;
+  background-color: var(--joy-color);
+}
+/* .profile-card header::before, .profile-card header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: inherit;
+} */
+/* .profile-card header::before {
+  transform: skewY(-8deg);
+  transform-origin: 100% 100%;
+}
+.profile-card header::after {
+  transform: skewY(8deg);
+  transform-origin: 0 100%;
+} */
+
+.profile-card header::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-repeat: repeat;
+  height: 10px;
+  background-size: 20px 20px;
+  background-image:
+   radial-gradient(circle at 10px -5px, transparent 12px, var(--lightest-color) 13px);
+}
+
+.profile-card header::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-repeat: repeat;
+  height: 15px;
+  background-size: 40px 20px;
+  background-image:
+    radial-gradient(circle at 10px 15px, var(--lightest-color) 12px, transparent 13px);
+}
+.profile-card header .avatar {
+  position: absolute;
+  left: 50%;
+  top: 60px;
+  margin-left: -50px;
+  z-index: 5;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  background: #ccc;
+  border: 3px solid #fff;
+}
+.profile-card header .avatar img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: auto;
+}
+
+.profile-card header .avatar .initial {
+  font-size: 50px;
+}
+.profile-card h3 {
+  position: relative;
+  margin: 10px 0 30px;
+  text-align: center;
+}
+.profile-card h3::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  margin-left: -15px;
+  width: 30px;
+  height: 1px;
+  background: #000;
+}
+.profile-card .infos {
+  padding: 0 1rem 2rem;
+  text-align: center;
+  line-height: 1.5;
+  color: #777;
+}
+
+
+
+
+a.profile-card-edit{
+  text-align: left !important;
+} 
+
+.update-avatar-icon {
+  margin-top:20px;
+  text-align: center;
+  font-size: 25px;
+  z-index:100;
+  color:black !important;
+
+}
+
 
