--- a/book_club/users/templates/users/profile.html
+++ b/book_club/users/templates/users/profile.html
@@ -1,41 +1,95 @@
-{% extends "users/base.html" %}
-{% load crispy_forms_tags %}
+{% extends "dashboard/base.html" %}
+{% load avatar static i18n %}
 {% block content %}
-<div class="content-section col-lg-12 col-md-12 col-sm-12 tutorial-style" style="min-height:65vh;">
-    <legend class="border-bottom mb-4">Profile Information:</legend>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="media">
-            <div class="media-body">
-                <h2 class="account-heading">{{ form.instance.username }}
-                    <small class="text-muted">({{ form.instance.status }})</small>
-                </h2>
-                <p class="text-secondary">{{ form.instance.first_name }} {{ form.instance.last_name }}</p>
-                <p class="text-secondary">{{ form.instance.email }}</p>
-               
-            </div>
+<div class="col-12 col-md-6">
+    <div class="profile-card mx-auto d-flex flex-column">
+    <header>
+      <div class="profile-card-avatar">
+        {% if user.profile.avatar %}
+                <span class="user-img"><img class="rounded-circle" src="{{user.avatar.url }} "width="45" alt="profile_pic"></span>
+              {% else %}
+                  <span class="user-img">{{ user|avatar }}</span> 
+              {% endif %} 
+      </div>
+    </header>
+    {% if request.user == user %}
+    <a href="#" class="update-avatar-icon">
+      <i class="fa-solid fa-camera-retro"></i>  
+    </a>
+    {% endif %}
+    <h3>{{user.pseudo}}</h3>
+    <div class="infos flex-grow-1">
+    <h6 class="darkest-color text-start">{% trans 'Informations' %}</h6>
+    {% if request.user == user %}
+      <p class="profile-card-subtitle text-start darkest-color small mb-0">{% trans 'Your name' %}</p>
+      {% if user.first_name and user.last_name  %}
+        <p class="profile-card-info text-start small">{{user.first_name}} {{user.last_name}}</p>
+      {% else %}
+        <div class="text-start small">
+          <a href="#" class="btn-edit"><i class="fa-solid fa-pencil btn-edit-icon"></i><span class="label">{% trans 'Add this info' %}</span></a>
         </div>
+      {% endif %}
+    {% else %}
+      {% if user.first_name and user.last_name and user.is_name_visible %}
+      <p class="profile-card-subtitle text-start darkest-color mb-0">{% trans 'Name' %}</p>
+      <p class="profile-card-info text-start small">{{user.first_name}} {{user.last_name}}</p>
+      {% endif%}
+    {% endif %}
+    {% if request.user == user %}
+      <p class="profile-card-subtitle text-start darkest-color small mb-0 mt-2">{% trans 'Your Email' %}</p>
+      
+        <p class="profile-card-info text-start small">{{user.email}}</p>
+        
+     
+      
 
-        {% if user.username == form.instance.username %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Edit Profile Information</legend>
-                <div class="form-row">
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.first_name|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.last_name|as_crispy_field }}
-                    </div>
-                </div> 
-                {{ form.email|as_crispy_field }}
-                
+    {% else %}
+      {% if user.is_mail_visible %}
+      <p class="profile-card-subtitle text-start darkest-color small mb-0 mt-2">{% trans 'Email' %}</p>
+      <p class="profile-card-info text-start small">{{user.email}}</p>
+      {% endif %}
+    {% endif %}
 
-                <a href="/">Change password?</a>
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
-            </div>
-        {% endif %}
-    </form>
+    {% if user.bio %}
+
+    <h6 class="darkest-color text-start mt-3">{% trans 'Bio' %}</h6>
+    
+      <p class="profile-card-info small text-justify">{{user.bio}}</p>
+    
+    
+
+
+    {% endif %}
+    
+
+    
+      
+      
+    
+    
+
+   
+      {% if request.user == user %}
+      <div class="text-start small">
+      <a href="#" class="text-center btn-edit"><i class="fa-solid fa-pencil btn-edit-icon pe-2"></i>Edit Profile</a>
+      </div>
+      {% else %}
+      <a href="#">Contact</a>
+      {% endif %}
+    </div>
+  </div>
+
+</div>
+
+<div class="col-12 col-md-6">
+  <div class="d-flex flex-column">
+    <div id="infos1" class="profile-subcard mt-sm-3 p-3">
+      <h6 class="darkest-color">{% trans 'Infos'%}</h6>
+    </div>
+
+    <div id="infos2" class="profile-subcard mt-sm-3 p-3">
+    <h6 class="darkest-color">{% trans 'Other infos'%}</h6>
+    </div>
+  </div>
 </div>
 {% endblock content %}
